--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
             <h2>Modelos de Carros</h2>
             <div class="carros">
                 <div class="carro">
-                    <img src="images/ferrari.jpg" alt="Ferrari F8 Tributo">
+                    <img src="download (1).jfif" alt="Ferrari F8 Tributo">
                     <h3>Ferrari F8 Tributo</h3>
                     <p>Um dos carros mais potentes do mundo, com design arrojado e performance de tirar o fôlego.</p>
                 </div>
                 <div class="carro">
-                    <img src="images/tesla.jpg" alt="Tesla Model S">
+                    <img src="download (2).jfif" alt="Tesla Model S">
                     <h3>Tesla Model S</h3>
                     <p>O futuro chegou com o Tesla Model S, um carro 100% elétrico e com desempenho impressionante.</p>
                 </div>
